[oss-fuzz 372573683] Direct-leak in text_segment_New
Ref:
- https://oss-fuzz.com/testcase-detail/6560151283236864
- https://oss-fuzz.com/testcase-detail/6091126255190016
xeon ~/work/git/vlc/build-asan $ ./test/vlc-demux-dec-run /home/tom/Downloads/clusterfuzz-testcase-minimized-vlc-demux-dec-libfuzzer-6560151283236864
=================================================================
==2921978==ERROR: LeakSanitizer: detected memory leaks
Direct leak of 96 byte(s) in 3 object(s) allocated from:
#0 0x7f8d1baf4630 in calloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:77
#1 0x7f8d1b8241c3 in text_segment_New ../../src/misc/text_style.c:374
#2 0x7f8d15c7f82a in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1575
#3 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#4 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#5 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#6 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#7 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#8 0x7f8d15c7f937 in ConvertCueToSegments ../../modules/codec/webvtt/subsvtt.c:1598
#9 0x7f8d15c7fa7b in ConvertCuesToSegments ../../modules/codec/webvtt/subsvtt.c:1652
#10 0x7f8d15c81a9a in RenderRegions ../../modules/codec/webvtt/subsvtt.c:1786
#11 0x7f8d15c82809 in Render ../../modules/codec/webvtt/subsvtt.c:1920
#12 0x7f8d15c829e8 in DecodeBlock ../../modules/codec/webvtt/subsvtt.c:2138
#13 0x557094fc4325 in test_decoder_process ../../test/src/input/decoder.c:265
#14 0x557094fc2b70 in EsOutSend ../../test/src/input/demux-run.c:112
#15 0x7f8d15c86f8e in es_out_Send ../../include/vlc_es_out.h:155
#16 0x7f8d15c86f8e in Demux ../../modules/demux/webvtt.c:576
#17 0x7f8d1b719c45 in demux_Demux ../../src/input/demux.c:223
#18 0x557094fc33a9 in demux_process_stream ../../test/src/input/demux-run.c:306
#19 0x557094fc3668 in vlc_demux_process_url ../../test/src/input/demux-run.c:348
#20 0x557094fc3707 in vlc_demux_process_path ../../test/src/input/demux-run.c:362
#21 0x557094fc2559 in main ../../test/vlc-demux-run.c:50
#22 0x7f8d1b34dd67 in __libc_start_call_main ../sysdeps/nptl/libc_start_call_main.h:58
Indirect leak of 96 byte(s) in 3 object(s) allocated from:
#0 0x7f8d1baeed80 in strdup ../../../../src/libsanitizer/asan/asan_interceptors.cpp:578
#1 0x7f8d1b8241d8 in text_segment_New ../../src/misc/text_style.c:379
#2 0x7f8d15c7f82a in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1575
#3 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#4 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#5 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#6 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#7 0x7f8d15c7f771 in ConvertNodesToSegments ../../modules/codec/webvtt/subsvtt.c:1585
#8 0x7f8d15c7f937 in ConvertCueToSegments ../../modules/codec/webvtt/subsvtt.c:1598
#9 0x7f8d15c7fa7b in ConvertCuesToSegments ../../modules/codec/webvtt/subsvtt.c:1652
#10 0x7f8d15c81a9a in RenderRegions ../../modules/codec/webvtt/subsvtt.c:1786
#11 0x7f8d15c82809 in Render ../../modules/codec/webvtt/subsvtt.c:1920
#12 0x7f8d15c829e8 in DecodeBlock ../../modules/codec/webvtt/subsvtt.c:2138
#13 0x557094fc4325 in test_decoder_process ../../test/src/input/decoder.c:265
#14 0x557094fc2b70 in EsOutSend ../../test/src/input/demux-run.c:112
#15 0x7f8d15c86f8e in es_out_Send ../../include/vlc_es_out.h:155
#16 0x7f8d15c86f8e in Demux ../../modules/demux/webvtt.c:576
#17 0x7f8d1b719c45 in demux_Demux ../../src/input/demux.c:223
#18 0x557094fc33a9 in demux_process_stream ../../test/src/input/demux-run.c:306
#19 0x557094fc3668 in vlc_demux_process_url ../../test/src/input/demux-run.c:348
#20 0x557094fc3707 in vlc_demux_process_path ../../test/src/input/demux-run.c:362
#21 0x557094fc2559 in main ../../test/vlc-demux-run.c:50
#22 0x7f8d1b34dd67 in __libc_start_call_main ../sysdeps/nptl/libc_start_call_main.h:58
SUMMARY: AddressSanitizer: 192 byte(s) leaked in 6 allocation(s).
Sample: clusterfuzz-testcase-minimized-vlc-demux-dec-libfuzzer-6560151283236864