codec: webvtt: fix leaking cue segments

The p_new element was never added to the chain.

Fixes #28990

(cherry picked from commit 60d9ff2fe65ecb895e67218af7d50bcb0b749bba) (edited)
edited:
- the indentation is different on 3.0